--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -26,5 +26,5 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: username/repository:tag
+        tags: joeyegberink/sample-app-aoai-chatgpt:latest
         file: ./WebApp.Dockerfile
